--- a/responsive.html
+++ b/responsive.html
@@ -38,6 +38,7 @@ Description : Responsive Layouts.
 		
 		.gap {
 			clear:both;
+			height: 55px;
 		}
 
 		@media screen and (min-width: 769px) {			
