All changes added

--- a/responsive.html
+++ b/responsive.html
@@ -46,11 +46,11 @@ Description : Responsive Layouts.
 				width:100%;
 			}
 			.medium { 
-				float:left;
+				float:right;
 				width:70%;
 			}
 			.small { 
-				float:right;
+				float:left;
 				width:30%;
 			 }
 		}
@@ -64,11 +64,11 @@ Description : Responsive Layouts.
 				width:100%;
 			}
 			.medium { 
-				float:left;
+				float:right;
 				width:60%;
 			}
 			.small { 
-				float:right;
+				float:left;
 				width:40%;
 			 }
 			
@@ -81,14 +81,12 @@ Description : Responsive Layouts.
 				width:100%;
 			}
 			.medium { 
-				float:left;
 				width:100%;
 			}
 			.small { 
-				float:right;
 				width:100%;
 			 }
-			 header:h1{font-size: 18px;}
+			 h1{font-size: 18px;}
         }
 
         
