--- a/responsive.html
+++ b/responsive.html
@@ -2,8 +2,8 @@
 =========================================================
 Name        : index.html
 Assignment  : Lab 4 Exercise B
-Author(s)   : Mahdi Ansari, William Arthur Philip Louis
-Submission  : May 21, 2030
+Author(s)   : Sam Laquerre, Robert Meyer
+Submission  : Feb 7th, 2024
 Description : Responsive Layouts.
 =========================================================
 -->
