--- a/flex.html
+++ b/flex.html
@@ -2,8 +2,8 @@
 =========================================================
 Name        : index.html
 Assignment  : Lab 4 Exercise C
-Author(s)   : Mahdi Ansari, William Arthur Philip Louis
-Submission  : May 21, 2030
+Author(s)   : Samuel Laquerre, Robert Meyer
+Submission  : February 7th, 2024
 Description : Flex Layouts.
 =========================================================
 -->
